modified header section
I added custom buttons and fixed based trouble

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header>some nice writeup</header>
+    <header>
+      some nice writeup
+      <button>login</button>
+    </header>
   </body>
 </html>
