added some codes that broke everything

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       some nice writeup
       <button>login</button>
     </header>
-    <footer>This is a footer</footer>
+    <footer>This is a footer Dragon complex code that kills code</footer>
   </body>
 </html>
