added some recrnt gbas gbos

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <header>
-      some nice writeup
+      my dad is the best dad in the world abcd
       <button>login</button>
     </header>
     <footer>This is a footer</footer>
+    some usless code
   </body>
 </html>
