--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header>
+    <div>
       my dad is the best dad in the world abcd
-      <button>login</button>
-    </header>
-    <footer>This is a footer</footer>
-    some usless code
+      <h3>login</h3>
+    </div>
+    <span>This is a footer</span>
+    <span>love ypu mama</span>
   </body>
 </html>
