--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     </div>
     <span>This is a footer</span>
     <span>love ypu mama</span>
+    <footer>
+      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
+      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
+      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
+      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
+    </footer>
   </body>
 </html>
