project setup: Added custom files

--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div>
-      my dad is the best dad in the world abcd
-      <h3>login</h3>
-    </div>
-    <span>This is a footer</span>
-    <span>love ypu mama</span>
-    <footer>
-      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
-      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
-      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
-      col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12 col-lg-3 col-md6 col-12
-    </footer>
+    <header></header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
