Header: Completed nav section

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unreal | Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="defaults.css" />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <div class="nav-brand"><span>U</span>nreal</div>
+        <ul class="destop-links">
+          <li><a href="#">Home</a></li>
+          <li>
+            <a href="#">Games <i class="fa-solid fa-gamepad"></i> </a>
+          </li>
+          <li><a href="#">Github</a></li>
+          <a href="#" class="button button-main"
+            >Contact <i class="fa-solid fa-headset"></i
+          ></a>
+        </ul>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
