Header: haeder banner section for destop completed

--- a/index.html
+++ b/index.html
@@ -14,19 +14,38 @@
   <body>
     <header>
       <nav>
-        <div class="nav-brand"><span>U</span>nreal</div>
+<div class="nav-brand"><span>U</span>nreal</div>
         <ul class="destop-links">
           <li><a href="#">Home</a></li>
           <li>
             <a href="#">Games <i class="fa-solid fa-gamepad"></i> </a>
           </li>
           <li><a href="#">Github</a></li>
-          <a href="#" class="button button-main"
-            >Contact <i class="fa-solid fa-headset"></i
+          <a href="#" class="button button-main">Contact <i class="fa-solid fa-headset"></i
           ></a>
         </ul>
       </nav>
+      
+      <section class="header-banner">
+        <h1 class="custom-text1">
+          <span>U</span>
+          <span>N</span>
+          <span>R</span>
+          <span>E</span>
+          <span>A<span>
+          <span>L</span>
+        </h1>
+        <h3 class="custom-text2">
+          The magic path to games
+        </h3>
+       <p>Whether you're a fan of survival horror, psychological horror, or jump scares, we've got you covered. Our game reviews provide detailed analysis of gameplay, graphics, story, and more, helping you make informed decisions on which games to play. Enter at your own risk...
+        </p>
+        <img src="./img/compas.svg" alt="spining image"/>
+
+      </section>
+      
     </header>
+
     <main></main>
     <footer></footer>
   </body>
